Fix asset paths for Pages deployment
Converted all CSS and JS references to root-absolute paths to prevent broken layouts on Cloudflare Pages and subdirectory routes (/tools).

--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>3DLabs — Contact</title>
+  <title>3DLabs - Contact</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <header class="top-bar">
@@ -15,46 +15,44 @@
         <span class="brand-subtitle">Contact</span>
       </div>
     </div>
-    <div class="top-bar-right top-nav">
-      <a class="nav-link" href="index.html">Home</a>
-      <a class="nav-link" href="shop.html">Shop</a>
-      <a class="nav-link" href="gallery.html">Gallery</a>
-      <a class="nav-link" href="social.html">Social</a>
-      <a class="nav-link nav-active" href="contact.html">Contact</a>
-      <a class="nav-link nav-cta" href="tools/filament-wizard.html">Filament Wizard</a>
-    </div>
+
+    <nav class="top-bar-right top-nav">
+      <a class="nav-link" href="/index.html">Home</a>
+      <a class="nav-link" href="/shop.html">Shop</a>
+      <a class="nav-link" href="/gallery.html">Gallery</a>
+      <a class="nav-link" href="/social.html">Social</a>
+      <a class="nav-link nav-active" href="/contact.html">Contact</a>
+      <a class="nav-link nav-cta" href="/tools/filament-wizard.html">Filament Wizard</a>
+    </nav>
   </header>
 
-  <main class="site-shell">
+  <main class="page">
     <section class="card">
-      <h1 class="page-title">Contact / Quotes</h1>
-      <p class="page-subtitle">
-        For now this uses email. Later we can add a Cloudflare form endpoint.
-      </p>
+      <h1>Contact</h1>
+      <p class="muted">Send details about your print (dimensions, material, and use case). We’ll reply with recommendations and pricing.</p>
 
-      <div class="card inner-card">
-        <div class="section-label">EMAIL</div>
-        <p class="page-subtitle">
-          <a class="nav-link nav-cta" href="mailto:3dlabs.cm@gmail.com?subject=3DLabs%20Quote%20Request">
-            Email 3dlabs.cm@gmail.com
-          </a>
-        </p>
+      <div class="grid-2">
+        <div class="card inner-card">
+          <h3>What to include</h3>
+          <ul class="muted">
+            <li>Part size (L × W × H)</li>
+            <li>Material preference (PLA / PETG / ABS / ASA / TPU)</li>
+            <li>Use case (cosmetic / functional / outdoor / heat exposure)</li>
+            <li>Desired finish (matte / glossy / textured)</li>
+          </ul>
+        </div>
 
-        <div class="section-label">INCLUDE</div>
-        <ul class="why-list">
-          <li>What the part does / load / environment</li>
-          <li>Rough size or STL/STEP file</li>
-          <li>Preferred material (or use Filament Wizard)</li>
-          <li>Quantity + deadline</li>
-          <li>Finish requirements (matte, smooth, strength-first, etc.)</li>
-        </ul>
+        <div class="card inner-card">
+          <h3>Quick links</h3>
+          <p class="muted">If you’re not sure on material, use the Filament Wizard first.</p>
+          <a class="btn btn-primary" href="/tools/filament-wizard.html">Open Filament Wizard</a>
+        </div>
       </div>
     </section>
-  </main>
 
-  <footer class="global-warning">
-    <span class="version">3DLabs · Contact</span>
-    Share only what you’re comfortable sharing. Files can be sent via link if preferred.
-  </footer>
+    <footer class="footer muted">
+      <div>3DLabs • Contact</div>
+    </footer>
+  </main>
 </body>
 </html>
