--- a/gallery.html
+++ b/gallery.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>3DLabs — Gallery</title>
+  <title>3DLabs - Gallery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <header class="top-bar">
@@ -15,52 +15,26 @@
         <span class="brand-subtitle">Gallery</span>
       </div>
     </div>
-    <div class="top-bar-right top-nav">
-      <a class="nav-link" href="index.html">Home</a>
-      <a class="nav-link" href="shop.html">Shop</a>
-      <a class="nav-link nav-active" href="gallery.html">Gallery</a>
-      <a class="nav-link" href="social.html">Social</a>
-      <a class="nav-link" href="contact.html">Contact</a>
-      <a class="nav-link nav-cta" href="tools/filament-wizard.html">Filament Wizard</a>
-    </div>
+
+    <nav class="top-bar-right top-nav">
+      <a class="nav-link" href="/index.html">Home</a>
+      <a class="nav-link" href="/shop.html">Shop</a>
+      <a class="nav-link nav-active" href="/gallery.html">Gallery</a>
+      <a class="nav-link" href="/social.html">Social</a>
+      <a class="nav-link" href="/contact.html">Contact</a>
+      <a class="nav-link nav-cta" href="/tools/filament-wizard.html">Filament Wizard</a>
+    </nav>
   </header>
 
-  <main class="site-shell">
+  <main class="page">
     <section class="card">
-      <h1 class="page-title">Gallery</h1>
-      <p class="page-subtitle">Add images later (e.g., put them in /assets and replace placeholders).</p>
-
-      <div class="gallery-grid">
-        <div class="gallery-tile">
-          <div class="gallery-img placeholder"></div>
-          <div class="gallery-meta">
-            <div class="gallery-name">Example Print #1</div>
-            <div class="gallery-sub">Material: PETG • Finish: Matte</div>
-          </div>
-        </div>
-
-        <div class="gallery-tile">
-          <div class="gallery-img placeholder"></div>
-          <div class="gallery-meta">
-            <div class="gallery-name">Example Print #2</div>
-            <div class="gallery-sub">Material: PLA • Finish: Smooth</div>
-          </div>
-        </div>
-
-        <div class="gallery-tile">
-          <div class="gallery-img placeholder"></div>
-          <div class="gallery-meta">
-            <div class="gallery-name">Example Print #3</div>
-            <div class="gallery-sub">Material: ASA • Outdoor use</div>
-          </div>
-        </div>
-      </div>
+      <h1>Gallery</h1>
+      <p class="muted">Photos and examples of real prints go here.</p>
     </section>
-  </main>
 
-  <footer class="global-warning">
-    <span class="version">3DLabs · Gallery</span>
-    Photos show examples; your final part may vary based on material, geometry, and finish requirements.
-  </footer>
+    <footer class="footer muted">
+      <div>3DLabs • Gallery</div>
+    </footer>
+  </main>
 </body>
 </html>
