--- a/shop.html
+++ b/shop.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>3DLabs — Shop</title>
+  <title>3DLabs - Shop</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <header class="top-bar">
@@ -15,54 +15,26 @@
         <span class="brand-subtitle">Shop</span>
       </div>
     </div>
-    <div class="top-bar-right top-nav">
-      <a class="nav-link" href="index.html">Home</a>
-      <a class="nav-link nav-active" href="shop.html">Shop</a>
-      <a class="nav-link" href="gallery.html">Gallery</a>
-      <a class="nav-link" href="social.html">Social</a>
-      <a class="nav-link" href="contact.html">Contact</a>
-      <a class="nav-link nav-cta" href="tools/filament-wizard.html">Filament Wizard</a>
-    </div>
+
+    <nav class="top-bar-right top-nav">
+      <a class="nav-link" href="/index.html">Home</a>
+      <a class="nav-link nav-active" href="/shop.html">Shop</a>
+      <a class="nav-link" href="/gallery.html">Gallery</a>
+      <a class="nav-link" href="/social.html">Social</a>
+      <a class="nav-link" href="/contact.html">Contact</a>
+      <a class="nav-link nav-cta" href="/tools/filament-wizard.html">Filament Wizard</a>
+    </nav>
   </header>
 
-  <main class="site-shell">
+  <main class="page">
     <section class="card">
-      <h1 class="page-title">Shop</h1>
-      <p class="page-subtitle">
-        Featured items and quick links. Next step: add product cards + “Buy on Etsy” buttons.
-      </p>
-
-      <div class="grid-3">
-        <div class="card feature-card">
-          <div class="feature-title">Featured Products</div>
-          <div class="feature-body">Add 6–12 products you keep in stock.</div>
-          <div class="btn-row">
-            <a class="btn-secondary btn-small" href="#" onclick="return false;">Coming soon</a>
-          </div>
-        </div>
-
-        <div class="card feature-card">
-          <div class="feature-title">Etsy Shop</div>
-          <div class="feature-body">Send customers to Etsy checkout while you build a native cart later.</div>
-          <div class="btn-row">
-            <a class="btn-primary btn-small" href="#" onclick="return false;">Add your Etsy link</a>
-          </div>
-        </div>
-
-        <div class="card feature-card">
-          <div class="feature-title">Custom Orders</div>
-          <div class="feature-body">Quotes for custom prints and functional parts.</div>
-          <div class="btn-row">
-            <a class="btn-secondary btn-small" href="contact.html">Request a quote</a>
-          </div>
-        </div>
-      </div>
+      <h1>Shop</h1>
+      <p class="muted">Featured products, Etsy listings, and popular categories will live here.</p>
     </section>
-  </main>
 
-  <footer class="global-warning">
-    <span class="version">3DLabs · Shop</span>
-    Pricing and availability may change. Confirm details on the checkout platform.
-  </footer>
+    <footer class="footer muted">
+      <div>3DLabs • Shop</div>
+    </footer>
+  </main>
 </body>
 </html>
