--- a/social.html
+++ b/social.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>3DLabs — Social</title>
+  <title>3DLabs - Social</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <header class="top-bar">
@@ -15,43 +15,26 @@
         <span class="brand-subtitle">Social</span>
       </div>
     </div>
-    <div class="top-bar-right top-nav">
-      <a class="nav-link" href="index.html">Home</a>
-      <a class="nav-link" href="shop.html">Shop</a>
-      <a class="nav-link" href="gallery.html">Gallery</a>
-      <a class="nav-link nav-active" href="social.html">Social</a>
-      <a class="nav-link" href="contact.html">Contact</a>
-      <a class="nav-link nav-cta" href="tools/filament-wizard.html">Filament Wizard</a>
-    </div>
+
+    <nav class="top-bar-right top-nav">
+      <a class="nav-link" href="/index.html">Home</a>
+      <a class="nav-link" href="/shop.html">Shop</a>
+      <a class="nav-link" href="/gallery.html">Gallery</a>
+      <a class="nav-link nav-active" href="/social.html">Social</a>
+      <a class="nav-link" href="/contact.html">Contact</a>
+      <a class="nav-link nav-cta" href="/tools/filament-wizard.html">Filament Wizard</a>
+    </nav>
   </header>
 
-  <main class="site-shell">
+  <main class="page">
     <section class="card">
-      <h1 class="page-title">Social</h1>
-      <p class="page-subtitle">Add your links now; we can embed feeds later.</p>
-
-      <div class="grid-3">
-        <a class="card social-card" href="#" onclick="return false;">
-          <div class="feature-title">Instagram</div>
-          <div class="feature-body">Build log, prints, and launches.</div>
-        </a>
-
-        <a class="card social-card" href="#" onclick="return false;">
-          <div class="feature-title">TikTok</div>
-          <div class="feature-body">Short builds and satisfying prints.</div>
-        </a>
-
-        <a class="card social-card" href="#" onclick="return false;">
-          <div class="feature-title">YouTube</div>
-          <div class="feature-body">Tutorials, reviews, and process.</div>
-        </a>
-      </div>
+      <h1>Social</h1>
+      <p class="muted">Links to socials, content embeds, and updates go here.</p>
     </section>
-  </main>
 
-  <footer class="global-warning">
-    <span class="version">3DLabs · Social</span>
-    Social platforms may be embedded later for better performance and SEO control.
-  </footer>
+    <footer class="footer muted">
+      <div>3DLabs • Social</div>
+    </footer>
+  </main>
 </body>
 </html>
