--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>3DLabs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <header class="top-bar">
@@ -16,71 +16,67 @@
       </div>
     </div>
 
-    <div class="top-bar-right top-nav">
-      <a class="nav-link nav-active" href="index.html">Home</a>
-      <a class="nav-link" href="shop.html">Shop</a>
-      <a class="nav-link" href="gallery.html">Gallery</a>
-      <a class="nav-link" href="social.html">Social</a>
-      <a class="nav-link" href="contact.html">Contact</a>
-      <a class="nav-link nav-cta" href="tools/filament-wizard.html">Filament Wizard</a>
-    </div>
+    <nav class="top-bar-right top-nav">
+      <a class="nav-link nav-active" href="/index.html">Home</a>
+      <a class="nav-link" href="/shop.html">Shop</a>
+      <a class="nav-link" href="/gallery.html">Gallery</a>
+      <a class="nav-link" href="/social.html">Social</a>
+      <a class="nav-link" href="/contact.html">Contact</a>
+      <a class="nav-link nav-cta" href="/tools/filament-wizard.html">Filament Wizard</a>
+    </nav>
   </header>
 
-  <main class="site-shell">
+  <main class="page">
     <section class="hero card">
-      <div class="hero-kicker">3DLabs</div>
-      <h1 class="hero-title">3D printing done properly.</h1>
-      <p class="hero-subtitle">
-        Custom prints, functional parts, and in-house tools like Filament Wizard for smarter material selection.
-      </p>
+      <div class="hero-meta">
+        <div class="kicker">3DLABS</div>
+        <h1>3D printing done properly.</h1>
+        <p class="muted">
+          Custom prints, functional parts, and in-house tools like Filament Wizard for smarter material selection.
+        </p>
 
-      <div class="btn-row">
-        <a class="btn-primary" href="shop.html"><span>🛒</span><span>Browse the shop</span></a>
-        <a class="btn-secondary" href="gallery.html"><span>🖼️</span><span>View gallery</span></a>
-        <a class="btn-secondary" href="tools/filament-wizard.html"><span>⚙️</span><span>Open Filament Wizard</span></a>
+        <div class="hero-actions">
+          <a class="btn btn-primary" href="/shop.html">Browse the shop</a>
+          <a class="btn btn-ghost" href="/gallery.html">View gallery</a>
+          <a class="btn btn-ghost" href="/tools/filament-wizard.html">Open Filament Wizard</a>
+        </div>
       </div>
     </section>
 
     <section class="grid-3">
-      <div class="card feature-card">
-        <div class="feature-title">Shop</div>
-        <div class="feature-body">Featured products, Etsy listings, and popular print categories.</div>
-        <div class="btn-row">
-          <a class="btn-secondary btn-small" href="shop.html">Open shop</a>
-        </div>
-      </div>
+      <article class="card">
+        <h3>Shop</h3>
+        <p class="muted">Featured products, Etsy listings, and popular print categories.</p>
+        <a class="btn btn-ghost" href="/shop.html">Open shop</a>
+      </article>
 
-      <div class="card feature-card">
-        <div class="feature-title">Gallery</div>
-        <div class="feature-body">Real prints, finishes, and examples to set expectations.</div>
-        <div class="btn-row">
-          <a class="btn-secondary btn-small" href="gallery.html">View gallery</a>
-        </div>
-      </div>
+      <article class="card">
+        <h3>Gallery</h3>
+        <p class="muted">Real prints, finishes, and examples to set expectations.</p>
+        <a class="btn btn-ghost" href="/gallery.html">View gallery</a>
+      </article>
 
-      <div class="card feature-card">
-        <div class="feature-title">Tools</div>
-        <div class="feature-body">Filament Wizard + calculators, guides, and print-prep tools.</div>
-        <div class="btn-row">
-          <a class="btn-secondary btn-small" href="tools/filament-wizard.html">Open tools</a>
-        </div>
-      </div>
+      <article class="card">
+        <h3>Tools</h3>
+        <p class="muted">Filament Wizard + calculators, guides, and print-prep tools.</p>
+        <a class="btn btn-ghost" href="/tools/filament-wizard.html">Open tools</a>
+      </article>
     </section>
 
-    <section class="card callout">
-      <div class="callout-title">Need a quote or custom part?</div>
-      <div class="callout-body">
+    <section class="card">
+      <h3>Need a quote or custom part?</h3>
+      <p class="muted">
         Send dimensions, material preferences, and use case—then we’ll recommend the right filament and pricing.
-      </div>
-      <div class="btn-row">
-        <a class="btn-primary" href="contact.html"><span>✉️</span><span>Request a quote</span></a>
-      </div>
+      </p>
+      <a class="btn btn-primary" href="/contact.html">Request a quote</a>
     </section>
-  </main>
 
-  <footer class="global-warning">
-    <span class="version">3DLabs · Site v1 · Dec 2025</span>
-    Tools and pricing are estimates. Final material and process selection depends on part requirements and printer capability.
-  </footer>
+    <footer class="footer muted">
+      <div>3DLabs • Site v1 • Dec 2025</div>
+      <div class="tiny">
+        Tools and pricing are estimates. Final material and process selection depends on part requirements and printer capability.
+      </div>
+    </footer>
+  </main>
 </body>
 </html>
