Fix asset paths for Pages deployment again
Converted all CSS and JS references to root-absolute paths to prevent broken layouts on Cloudflare Pages and subdirectory routes (/tools).

--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>3DLabs - Gallery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header class="top-bar">
@@ -15,26 +15,30 @@
         <span class="brand-subtitle">Gallery</span>
       </div>
     </div>
-
-    <nav class="top-bar-right top-nav">
-      <a class="nav-link" href="/index.html">Home</a>
-      <a class="nav-link" href="/shop.html">Shop</a>
-      <a class="nav-link nav-active" href="/gallery.html">Gallery</a>
-      <a class="nav-link" href="/social.html">Social</a>
-      <a class="nav-link" href="/contact.html">Contact</a>
-      <a class="nav-link nav-cta" href="/tools/filament-wizard.html">Filament Wizard</a>
-    </nav>
+    <div class="top-bar-right top-nav">
+      <a class="nav-link" href="index.html">Home</a>
+      <a class="nav-link" href="shop.html">Shop</a>
+      <a class="nav-link nav-active" href="gallery.html">Gallery</a>
+      <a class="nav-link" href="social.html">Social</a>
+      <a class="nav-link" href="contact.html">Contact</a>
+      <a class="nav-link nav-cta" href="tools/filament-wizard.html">Filament Wizard</a>
+    </div>
   </header>
 
   <main class="page">
-    <section class="card">
-      <h1>Gallery</h1>
-      <p class="muted">Photos and examples of real prints go here.</p>
+    <section class="hero-card">
+      <div class="hero-eyebrow">GALLERY</div>
+      <h1>Print examples</h1>
+      <p class="hero-subtitle">Showcase coming soon. In the meantime, reach out with what you want to print.</p>
+      <div class="hero-actions">
+        <a class="btn btn-primary" href="contact.html">Request a quote</a>
+        <a class="btn btn-ghost" href="tools/filament-wizard.html">Open Filament Wizard</a>
+      </div>
     </section>
-
-    <footer class="footer muted">
-      <div>3DLabs • Gallery</div>
-    </footer>
   </main>
+
+  <footer class="footer">
+    <div>3DLabs • Gallery</div>
+  </footer>
 </body>
 </html>
