--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>3DLabs - Contact</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header class="top-bar">
@@ -15,44 +15,32 @@
         <span class="brand-subtitle">Contact</span>
       </div>
     </div>
-
-    <nav class="top-bar-right top-nav">
-      <a class="nav-link" href="/index.html">Home</a>
-      <a class="nav-link" href="/shop.html">Shop</a>
-      <a class="nav-link" href="/gallery.html">Gallery</a>
-      <a class="nav-link" href="/social.html">Social</a>
-      <a class="nav-link nav-active" href="/contact.html">Contact</a>
-      <a class="nav-link nav-cta" href="/tools/filament-wizard.html">Filament Wizard</a>
-    </nav>
+    <div class="top-bar-right top-nav">
+      <a class="nav-link" href="index.html">Home</a>
+      <a class="nav-link" href="shop.html">Shop</a>
+      <a class="nav-link" href="gallery.html">Gallery</a>
+      <a class="nav-link" href="social.html">Social</a>
+      <a class="nav-link nav-active" href="contact.html">Contact</a>
+      <a class="nav-link nav-cta" href="tools/filament-wizard.html">Filament Wizard</a>
+    </div>
   </header>
 
   <main class="page">
-    <section class="card">
-      <h1>Contact</h1>
-      <p class="muted">Send details about your print (dimensions, material, and use case). We’ll reply with recommendations and pricing.</p>
-
-      <div class="grid-2">
-        <div class="card inner-card">
-          <h3>What to include</h3>
-          <ul class="muted">
-            <li>Part size (L × W × H)</li>
-            <li>Material preference (PLA / PETG / ABS / ASA / TPU)</li>
-            <li>Use case (cosmetic / functional / outdoor / heat exposure)</li>
-            <li>Desired finish (matte / glossy / textured)</li>
-          </ul>
-        </div>
-
-        <div class="card inner-card">
-          <h3>Quick links</h3>
-          <p class="muted">If you’re not sure on material, use the Filament Wizard first.</p>
-          <a class="btn btn-primary" href="/tools/filament-wizard.html">Open Filament Wizard</a>
-        </div>
+    <section class="hero-card">
+      <div class="hero-eyebrow">CONTACT</div>
+      <h1>Request a quote</h1>
+      <p class="hero-subtitle">
+        Send dimensions, material preferences, and your use case. We’ll reply with a recommendation and pricing.
+      </p>
+      <div class="hero-actions">
+        <a class="btn btn-primary" href="mailto:3dlabs.cm@gmail.com">Email 3dlabs.cm@gmail.com</a>
+        <a class="btn btn-ghost" href="tools/filament-wizard.html">Use Filament Wizard first</a>
       </div>
     </section>
-
-    <footer class="footer muted">
-      <div>3DLabs • Contact</div>
-    </footer>
   </main>
+
+  <footer class="footer">
+    <div>3DLabs • Contact</div>
+  </footer>
 </body>
 </html>
